@@ -1,5 +1,13 @@
 # ChangeLog for calc-extension:
 
+*calc-1.0:
+	Martin Väth <martin at mvath.de>:
+	- Do not use several number formats for output. Instead:
+	- Introduce "..." special to set output base
+	- Introduce '...' special to set input size
+	- Fix options page
+	- For all above: https://github.com/vaeth/calc-extension/issues/1
+
 *calc-0.2:
 	Martin Väth <martin at mvath.de>:
 	- Provide brief description on top of page
